--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
            <input type="button" class="num maincolor" name="btn3" value="3" onclick="displaynum(btn3.value)">
            <input type="button" class="num maincolor" name="btn2" value="2" onclick="displaynum(btn2.value)">          
            <input type="button" class="num maincolor" name="btn1" value="1" onclick="displaynum(btn1.value)">
-           <input type="button" class="num gre" name="mulbtn" value="×" onclick="displaynum(mulbtn.value)"><br>
+           <input type="button" class="num gre" name="mulbtn" value="*" onclick="displaynum(mulbtn.value)"><br>
 
            <input type="button" class="num maincolor" name="dot" value="." onclick="displaynum(dot.value)">
            <input type="button" class="num maincolor" name="btn0" value="0" onclick="displaynum(btn0.value)">          
            <input type="button" class="num pur" name="eqlbtn" value="=" onclick="text1.value=eval(text1.value)">
-           <input type="button" class="num ora" name="divbtn" value="÷" onclick="displaynum(divbtn.value)"><br> 
+           <input type="button" class="num ora" name="divbtn" value="/" onclick="displaynum(divbtn.value)"><br> 
            <h4 class="rodape">desenvolvido por livia oliveira ©</h4> 
                           
        </form>
